--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
+    "googleapis": "^128.0.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
