add daisyui and heroicons

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "framer-motion": "^10.16.4",
     "googleapis": "^128.0.0",
     "next": "14.0.1",
@@ -20,6 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^3.9.4",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
