--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.8",
-    "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "googleapis": "^128.0.0",
     "lucide-react": "^0.292.0",
-    "next": "14.0.1",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -41,10 +42,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "daisyui": "^4.4.2",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "^14.0.4",
     "postcss": "^8",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
